# Trip-Booking

./: .env  .env.example  PRISMA_SETUP.md  README.md  package-lock.json  package.json  tsconfig.json
backend/: .env.example  .gitignore  API_ENDPOINTS.md  BACKEND_SUMMARY.md  pyproject.toml  run.py  seed_db.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: admin.py  auth.py  availability.py  bookings.py  buses.py  routes.py  vehicles.py
backend/app/core/: auth.py  config.py  deps.py  security.py
backend/app/db/: base.py  crud.py  models.py  session.py
backend/app/prisma/: client.py
backend/app/schemas/: booking.py  bus.py  user.py  vehicle.py
backend/app/services/: pricing.py
frontend/: .env.example  DESIGN_SYSTEM.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(admin)/: page.tsx
frontend/app/admin/: page.tsx
frontend/app/routes/: page.tsx
frontend/components/admin/: AdminLayout.tsx  AdminSidebar.tsx  BookingManagement.tsx  DashboardStats.tsx  Reports.tsx  VehicleManagement.tsx
frontend/components/booking/: BookingConfirmation.tsx  BookingForm.tsx  CustomerDetails.tsx  ReviewAndPay.tsx  TripDetails.tsx  TripSummarySidebar.tsx
frontend/components/layout/: footer.tsx  header.tsx
frontend/components/ui/: badge.tsx  card.tsx  (+14 more)
frontend/hooks/: use-auth.ts  use-bookings.ts
frontend/lib/: api.ts  utils.ts  validation.ts  vehicle-transform.ts
frontend/types/: booking.ts  index.ts
prisma/: schema.prisma  seed.ts
(+23 files in other folders)
